# framework

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json
cmake/: UtilityTargets.cmake  Windows.Kits.cmake  Windows.MSVC.toolchain.cmake
src/: CMakeLists.txt  Main.cpp
src/Log/: FileSinkEx.cpp  FileSinkEx.h  Log.cpp  Log.h  RotationFileSinkEx.cpp  RotationFileSinkEx.h
src/Misc/: ConstExpr.h  CtxThread.cpp  CtxThread.h  DumpClient.cpp  DumpClient.h  Log.cpp  Log.h  PoolBuffer.cpp  PoolBuffer.h
